force-app/main/default/objects/Seats__c/Seats__c.object-meta.xml
<CustomObject>
    <label>Seat</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Seat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>