force-app/main/default/objects/Seats__c/fields/Cubicle__c.field-meta.xml
<CustomField>
    <fullName>Cubicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cubicle</label>
    <referenceTo>Cubicles__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>