force-app/main/default/objects/Seats__c/fields/Floor_Details__c.field-meta.xml
<CustomField>
    <fullName>Floor_Details__c</fullName>
    <formula>Cubicle__r.Block__r.Floor__r.Name__c + &apos; - &apos; +  Cubicle__r.Block__r.Floor__r.Building__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Details</label>
    <type>Text</type>
</CustomField>