force-app/main/default/objects/Seats__c/fields/isCloseToDoor__c.field-meta.xml
<CustomField>
    <fullName>isCloseToDoor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCloseToDoor</label>
    <type>Checkbox</type>
</CustomField>