force-app/main/default/objects/Seats__c/fields/isCloseToMeetingRoom__c.field-meta.xml
<CustomField>
    <fullName>isCloseToMeetingRoom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCloseToMeetingRoom</label>
    <type>Checkbox</type>
</CustomField>