force-app/main/default/objects/Seats__c/fields/Seat_id__c.field-meta.xml
<CustomField>
    <fullName>Seat_id__c</fullName>
    <label>Seat id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>