force-app/main/default/objects/Seats__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Seat_id__c</columns>
    <columns>IsCloseToAC__c</columns>
    <columns>isCloseToDoor__c</columns>
    <columns>isCloseToMeetingRoom__c</columns>
    <columns>isCloseToWIndow__c</columns>
    <columns>Floor_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>